# double-stage

./: .gitignore  README.md
backend/: .env  Cargo.toml  diesel.toml
backend/migrations/2025-01-30-180051_dev_migration/: up.sql
backend/src/: api_request.rs  create_api.rs  main.rs  response.json  rr_json.rs
backend/src/database/: mod.rs  models.rs  schema.rs  show_posts.rs  write_posts.rs
frontend/: eslint.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Chat.tsx  Layout.tsx  Sidebar.tsx  Welcome.tsx
